k8s/prod/service.yml
apiVersion: v1
kind: Service
metadata:
  name: papagaio-web
  namespace: prod
  labels:
    app: papagaio-web
spec:
  ports:
    - port: 80
      name: web
      protocol: TCP
      targetPort: 80
  selector:
    app: papagaio-web
  sessionAffinity: None
  type: ClusterIP
