k8s/prod/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: papagaio-web
  namespace: prod
spec:
  rules:
    - host: papagaio-web.sorint.it
      http:
        paths:
          - path: /
            backend:
              serviceName: papagaio-web
              servicePort: 80
